feat: 写入文档新增json文件格式

--- a/app/pages/template/shujubiaoge/xieruwendang.html
+++ b/app/pages/template/shujubiaoge/xieruwendang.html
@@ -8,6 +8,8 @@
                 <input type="radio" name="fileType" value="word" checked>word</label>
             <label>
                 <input type="radio" name="fileType" value="txt">txt</label>
+            <label>
+                <input type="radio" name="fileType" value="json">json</label>
         </p>
     </div>
     <div class="input-box">
