fix: 读取文档支持json格式

--- a/app/pages/template/shujubiaoge/duquwendang.html
+++ b/app/pages/template/shujubiaoge/duquwendang.html
@@ -1,7 +1,7 @@
 <div class="main-con-item" menu_name="import">
     <div class="input-box">
         <p>
-            <b>读取文件（支持word,txt文件类型）：</b>
+            <b>读取文件（支持word,txt,json文件类型）：</b>
         </p>
         <button type="button" onclick="savefilePath.click();">点击选择文件</button>
         <div class="input-box">
