--- a/app/pages/template/canshuchuli/javascriptyingqing.html
+++ b/app/pages/template/canshuchuli/javascriptyingqing.html
@@ -67,7 +67,7 @@
         <p>
             <b>传入参数 ：</b>
         </p>
-        <input type="hidden" name="indexCount" value="1">
+        <input type="hidden" name="args-index" value="1">
         <div class="liAdd">
             <div class="input-box">
                 <input type="text" name="value-1">
@@ -100,7 +100,45 @@
 
 <script>
     $(function () {
-        //携带的参数
+        let metaConfig = ''
+        for (const { metaWork } of JSON.parse(nowData.json)) {
+            const metas = metaWork && metaWork.filter(item => +item.id === +modal.$data.editLiuchengItem.editItemId)
+            if (metas && metas.length) {
+                metaConfig = metas[0]
+                break
+            }
+        }
+        if (metaConfig && metaConfig.inputInfo) {
+            const { inputInfo } = metaConfig
+            debugger
+            const processed = {}
+            inputInfo.forEach(item => {
+                const { name } = item
+                if (/^.*-key-\d+$/.test(name) || /^.*-value-\d+$/.test(name)) {
+                    const valueSplit = ( name.split('-key-').length > 1 && name.split('-key-')) || (name.split('-value-').length > 1 && name.split('-value-'))
+                    const id = valueSplit[0]
+                    const index = +valueSplit[1]
+                    if (index === 1 || (processed[id] && processed[id].length && processed[id].indexOf(index) + 1)) {
+                        return
+                    }
+                    const $params = $(`#${id}`)
+                    let $liAdd = $params.find(".liAdd").eq(0)
+                    const $liAddTemplate = $liAdd.clone(true)
+                    const $liAddTemplateCopy = $liAddTemplate.clone(true)
+                    let $findKey = $liAddTemplateCopy.find(`[name='key-1']`)
+                    if ($findKey){
+                        $findKey.attr("name", `${id}-key-${index}`)
+                    }
+                    let $findValue = $liAddTemplateCopy.find(`[name='value-1']`)
+                    if ($findValue){
+                        $findValue.attr("name", `${id}-value-${index}`)
+                    }
+                    $liAddTemplateCopy.appendTo($params)
+                    processed[id] = processed[id] || []
+                    processed[id].push(index)
+                }
+            })
+        }
         $(".params").each(function (key, paramsElem) {
             const $params = $(paramsElem)
             const idAttr = $params.attr("id")
@@ -115,7 +153,7 @@
             }
             const $liAddTemplate = $liAdd.clone(true)
             $params.on('click', '.add', function () {
-                let indexCount = $params.find('[name="indexCount"]')
+                let indexCount = $params.find(`[name="${idAttr}-index"]`)
                 let index = parseInt(indexCount.val()) + 1
                 const $liAddTemplateCopy = $liAddTemplate.clone(true)
                 let $findKey = $liAddTemplateCopy.find(`[name='${idAttr}-key-1']`)
